WorkOS team health endpoint return success for unprovisioned teams (#44818)
GitOrigin-RevId: 0a322019038d066b8b69fec7224706d14fc54a2b
